--- a/Portifolio_Novo/css/interesse.css
+++ b/Portifolio_Novo/css/interesse.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,7 +12,7 @@ body {
 
 #cabecalho {
     background-color: #0A1A3F;
-    
+
 }
 
 .botaoCabecalho {
@@ -28,16 +28,32 @@ body {
     transition: background-color 0.3s;
     margin: 1rem;
     color: #0A1A3F;
-    
-}
-.estiloTopo {
-    display: flex;
-    padding: 0.8rem;
-    justify-content: flex-end;
+
 }
 
+.estiloTopo {
+    display: flex;
+    padding: 0.8rem;    
+    gap: 65%;
+}
+
+#ii {
+    display: flex;
+    padding: 0.8rem;
+    align-items: start;
+}
+
+#ee {
+    display: flex;
+    padding: 0.8rem;
+    align-items: end;
+}
+
+
+
+
 #rodape {
-    
+
     color: white;
     text-align: center;
     padding: 1rem;
@@ -68,7 +84,7 @@ body {
     font-size: 2rem;
     margin-top: 1rem;
     padding: 3rem 0 0 0;
-    
+
 }
 
 * {
@@ -103,19 +119,19 @@ body {
 
 #imagemForma {
     border: 1rem whitesmoke;
-background-color: aquamarine;
+    background-color: aquamarine;
     border-radius: 100%;
     margin: 2rem;
     position: relative;
-    
+
 }
 
 .nuvemForm {
- border-radius: 1rem;
- margin: 2rem;
- background-color: rgb(61, 60, 60);
- padding: 0.8rem;
- position: relative;
+    border-radius: 1rem;
+    margin: 2rem;
+    background-color: rgb(61, 60, 60);
+    padding: 0.8rem;
+    position: relative;
 
 }
 
@@ -156,7 +172,7 @@ background-color: aquamarine;
 }
 
 .voltarPagina {
-background-color: #D6D6D6;
+    background-color: #D6D6D6;
     padding: 0.4rem 0.4rem;
     text-align: center;
     text-decoration: none;
@@ -168,4 +184,22 @@ background-color: #D6D6D6;
     transition: background-color 0.3s;
     margin: 1rem;
     color: #0A1A3F;
+}
+
+.voltarPagina {
+    background-color: #D6D6D6;
+    padding: 0.4rem 0.4rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin: 1rem;
+    color: #0A1A3F;
+    align-items: start;
+
+
 }
