--- a/Portifolio_Novo/css/portifolio.css
+++ b/Portifolio_Novo/css/portifolio.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,7 +12,7 @@ body {
 
 #cabecalho {
     background-color: #0A1A3F;
-    
+
 }
 
 .botaoCabecalho {
@@ -28,8 +28,9 @@ body {
     transition: background-color 0.3s;
     margin: 1rem;
     color: #0A1A3F;
-    
+
 }
+
 .estiloTopo {
     display: flex;
     padding: 0.8rem;
@@ -37,7 +38,7 @@ body {
 }
 
 #rodape {
-    
+
     color: white;
     text-align: center;
     padding: 1rem;
@@ -68,7 +69,7 @@ body {
     font-size: 2rem;
     margin-top: 1rem;
     padding: 3rem 0 0 0;
-    
+
 }
 
 * {
@@ -103,19 +104,19 @@ body {
 
 #imagemForma {
     border: 1rem whitesmoke;
-background-color: aquamarine;
+    background-color: aquamarine;
     border-radius: 100%;
     margin: 2rem;
     position: relative;
-    
+
 }
 
 .nuvemForm {
- border-radius: 1rem;
- margin: 2rem;
- background-color: rgb(61, 60, 60);
- padding: 0.8rem;
- position: relative;
+    border-radius: 1rem;
+    margin: 2rem;
+    background-color: rgb(61, 60, 60);
+    padding: 0.8rem;
+    position: relative;
 
 }
 
@@ -124,33 +125,14 @@ background-color: aquamarine;
     font-size: 2rem;
 }
 
-#botaoCabecalho a {
-    position: relative;
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-    padding: 5px 0;
-    transition: color 0.3s;
+#fotoRosto {
+    width: 12rem;
+    height: 12rem;
+    display: flex;
 }
 
-#botaoCabecalho a::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    background-color: white;
-    transform: scaleX(0);
-    transform-origin: center;
-    transition: transform 0.3s ease-in-out;
+#fotoRosto img {
+    width: 1rem;
+    height: 1rem;
 }
 
-#botaoCabecalho a:hover::after {
-    transform: scaleX(1);
-}
-
-
-#botaoCabecalho a:hover {
-    color: #4FC1E9;
-}
